--- a/test.html
+++ b/test.html
@@ -13,17 +13,12 @@
     import * as d3 from "https://cdn.jsdelivr.net/npm/d3@7/+esm";
     import {burndownPlot} from './tools.js';
 
-    async function main() {
-        const data = await d3.csv('data.csv');
-        data.forEach(d => {
-            d.date = new Date(d.date);
-        });
-        console.log(data)
+    d3.csv('data.csv').then(data2 => {
+        burndownPlot(data2,'date','burndown')
+    })
 
-        burndownPlot(data,'date','burndown');
 
-    }
-    main()
+
 
 </script>
 </html>
