Added colors to bar plots

--- a/test.html
+++ b/test.html
@@ -25,6 +25,7 @@
         {'name':'reason 2','value':84000,startvalue:false}
     ];
 
+    console.log(walkdata)
     let newarray = barwalk(walkdata);
     console.log(newarray)
 
