--- a/test.html
+++ b/test.html
@@ -12,6 +12,8 @@
     <div id="barwalk"></div>
     <h1>Schedule</h1>
     <div id="schedule"></div>
+    <h1>Unstack</h1>
+    <div id="unstack"></div>    
 </body>
 <script type="module">
     import * as d3 from "https://cdn.jsdelivr.net/npm/d3@7/+esm";
@@ -35,5 +37,15 @@
         plotschedule(data,new Date('12/1/2024'),new Date('6/1/2026'),'schedule')
     })
 
+</script>
+<script type="module">
+    import {groupUnstack} from './tools.js';
+    import * as d3 from "https://cdn.jsdelivr.net/npm/d3@7/+esm";
+
+    d3.json('./unemployment.json').then(data => {
+
+        let unstacked = groupUnstack(data,'date','industry',(v) => d3.sum(v, d => d.unemployed))
+        console.log(unstacked)
+    })
 </script>
 </html>
