--- a/test.html
+++ b/test.html
@@ -39,13 +39,15 @@
 
 </script>
 <script type="module">
-    import {groupUnstack} from './tools.js';
+    import {groupUnstack,stackedPrep} from './tools.js';
     import * as d3 from "https://cdn.jsdelivr.net/npm/d3@7/+esm";
 
     d3.json('./unemployment.json').then(data => {
 
         let unstacked = groupUnstack(data,'date','industry',(v) => d3.sum(v, d => d.unemployed))
-        console.log(unstacked)
+
+        let stacked = stackedPrep(data,'date','industry','unemployed')
+        console.log(stacked)
     })
 </script>
 </html>
